@@ -119,7 +119,6 @@ MENUS_HEADING_ASSIGN_MODULE=Module
 MENUS_HEADING_ASSIGN_POSITION=Position
 MENUS_HEADING_ASSIGN_SHOW=Show
 MENUS_ITEM_MODULE_ASSIGNMENT=Module Assignment for this Menu Item
-MENUS_ITEM_MODULE_ASSIGNMENT_DESC=Below is a list of modules assigned to this menu item. Click the <strong>Change</strong> button to add or remove module assignments.
 MENUS_ITEM_OPTIONS=Options
 MENUS_ITEM_MODULE_ACCESS_POSITION=%1$s <small>(%2$s in %3$s)</small>
 
